--- a/assets/views/getStarted.html
+++ b/assets/views/getStarted.html
@@ -16,6 +16,7 @@
             border-radius: 10px;
         }
     </style>
+    <link rel="shortcut icon" href="assets/imgs/favicon.png" type="image/png">
 </head>
 <body>
     <p><b>If you've never touched a Rubik's cube before, don't worry — this article will guide you from a curious beginner, to a confident cuber</b>. Cubing is not hyst about solving a puzzle; it's about unlocking a new hobby that blends logic, patience, and creativity.</p>
