--- a/assets/views/notation.html
+++ b/assets/views/notation.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
     <title>We Are Cubers - WCA Simulator</title>
+    <link rel="shortcut icon" href="assets/imgs/favicon.png" type="image/png">
 </head>
 <body>
     <div id="backBtn">
