Update beginnerMethod.html, cfop.html, getStarted.html, notation.html, solve.html, wca.html, weAreCubers.html

--- a/assets/views/solve.html
+++ b/assets/views/solve.html
@@ -7,7 +7,7 @@
     <script src="../js/AO5finder.js"></script>
     <script src="../js/scrambler.js"></script>
     <title>Solve 1 - WCA Simulator</title>
-    <link rel="shortcut icon" href="assets/imgs/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="../imgs/favicon.png" type="image/png">
 </head>
 <body>
     <p id="scramble"></p>
