--- a/assets/views/wca.html
+++ b/assets/views/wca.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/articles.css">
     <link rel="stylesheet" href="../css/wcaBtns.css">
     <title>What is WCA? - WCA Simulator</title>
+    <link rel="shortcut icon" href="../imgs/favicon.png" type="image/png">
     <style>
         ::-webkit-scrollbar {
             width: 10px;
@@ -17,7 +18,6 @@
             border-radius: 10px;
         }
     </style>
-    <link rel="shortcut icon" href="assets/imgs/favicon.png" type="image/png">
 </head>
 <body>
     <p>The World Cube Association (WCA) is the global organization that governs official Rubik's Cube Competitions, sets the rules, and maintains world records for twisty puzzles. It's the reason cubing is a real sport, not just a hobby.</p>
