--- a/assets/views/getStarted.html
+++ b/assets/views/getStarted.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get Started With Cubing - WCA Simulator</title>
     <link rel="stylesheet" href="../css/articles.css">
+    <link rel="shortcut icon" href="../imgs/favicon.png" type="image/png">
     <style>
         ::-webkit-scrollbar {
             width: 10px;
@@ -16,7 +17,6 @@
             border-radius: 10px;
         }
     </style>
-    <link rel="shortcut icon" href="assets/imgs/favicon.png" type="image/png">
 </head>
 <body>
     <p><b>If you've never touched a Rubik's cube before, don't worry — this article will guide you from a curious beginner, to a confident cuber</b>. Cubing is not hyst about solving a puzzle; it's about unlocking a new hobby that blends logic, patience, and creativity.</p>
